--- a/themes/lyon-theme/layout/pages/confederations.ejs
+++ b/themes/lyon-theme/layout/pages/confederations.ejs
@@ -31,7 +31,8 @@
       </div>
     </div>
     <br>
-    <p>Beyond the confederations above, our network also includes the following countries which are developing themselves (creating more JEs and establishing a confederation) to soon join Junior Enterprises Global and thus currently act as observers of the JEGlobal organization:</p>
+    <p>Beyond the confederations above, our network also includes countries which are developing themselves (creating more JEs and establishing a confederation) to soon join Junior Enterprises Global.</p>
+    <p>Therefore, these JEs/countries currently act as observers of the JEGlobal organization:</p>
     <div class="deck">
       <% site.posts.forEach(function(observer){ %>
         <% if(observer.type=='observer'){ %>
