--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -31,11 +31,14 @@
     <a href="/start-a-je" class="highlight purple-hover">Start a JE</a>
     <div class="navbar-social">
       <span>Follow us:</span>
-      <a href="https://www.facebook.com/jeglobalcouncil/">
+      <a href="https://www.facebook.com/juniorenterprisesglobal/">
         <i class="fab fa-facebook-f"></i>
       </a>
       <a href="https://www.linkedin.com/company/junior-enterprise-global-council/">
         <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="https://www.instagram.com/je.global/">
+        <i class="fab fa-instagram"></i>
       </a>
     </div>
   </nav>
