--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="three-quarters column u-center u-750-left">
-        <img src="/assets/logos/jegc-logo.png" alt="Junior Enterprise Global Council Logo">
+        <img src="/assets/logos/jeglobal-2.png" alt="Junior Enterprises Global Logo">
         <nav>
           <a href="/">Home</a>
           <a href="/map">Map</a>
@@ -20,10 +20,10 @@
     </div>
     <div class="row u-tiny-text">
       <div class="one-half column u-center u-750-left">
-        <p>© 2018 Junior Enterprise Global Council</p>
+        <p>© 2019 Junior Enterprises Global</p>
       </div>
       <div class="one-half column u-center u-750-right">
-        <p>Questions? <a href="mailto:kalil.monteiro@brasiljunior.org.br">kalil.monteiro@brasiljunior.org.br</a> | <button class="u-button" onclick="smoothScroll('navigation');">Scroll to top <i class="fa fa-caret-up"></i></button></p>
+        <p>Questions? <a href="mailto:secretarygeneral@juniorenterprises.org">secretarygeneral@juniorenterprises.org</a> | <button class="u-button" onclick="smoothScroll('navigation');">Scroll to top <i class="fa fa-caret-up"></i></button></p>
       </div>
     </div>
   </div>
