--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -50,7 +50,7 @@
   <img src="/assets/images/jewc-16-keynote.jpeg">
   <div class="container row">
     <div class="u-750-vcenter one-third column">
-      <img src="/assets/logos/jegc-logo-dark-bg.png" alt="Junior Enterprise Global Council Logo">
+      <img src="/assets/logos/jeglobal-2-darkbg.png" alt="Junior Enterprises Global Logo">
     </div>
     <div class="offset-by-one-third two-thirds column card">
       <section>
