--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -1,5 +1,5 @@
 <div class="<% if(page.immersive){ %>immersive<% } %> navbar<% if(page.bottomnav){ %> bottomnav<% } else { %> topnav<% } %>" id="navigation">
-  <a href="/" class="navbar-logo"><img src="/assets/logos/jeglobal.png" alt="Junior Enterprises Logo"></a>
+  <a href="/" class="navbar-logo"><img src="/assets/logos/jeglobal.png" alt="Junior Enterprises Global Logo"></a>
   <nav class="navbar-main">
     <a href="/">Home</a>
     <div class="dropdown">
