--- a/themes/lyon-theme/layout/partial/footer.ejs
+++ b/themes/lyon-theme/layout/partial/footer.ejs
@@ -12,8 +12,8 @@
       </div>
       <div class="one-quarter column u-center u-750-right">
         <nav>
-          <a href="https://www.facebook.com/juniorenterprisesglobal/"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.linkedin.com/company/junior-enterprise-global-council/"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.facebook.com/juniorenterprisesglobal/"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/company/junior-enterprise-global-council/"><i class="fab fa-linkedin"></i></a>
           <a href="https://www.instagram.com/je.global/"><i class="fab fa-instagram"></i></a>
         </nav>
       </div>
