--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -46,7 +46,7 @@
     </div>
   </section>
 </div></div>
-<section id="global-council" class="bg-image bg-gradient-1-light">
+<section id="je-global" class="bg-image bg-gradient-1-light">
   <img src="/assets/images/jewc-16-keynote.jpeg">
   <div class="container row">
     <div class="u-750-vcenter one-third column">
@@ -54,10 +54,10 @@
     </div>
     <div class="offset-by-one-third two-thirds column card">
       <section>
-        <h3>The JE Global Council</h3>
+        <h3>The JEGlobal Organization</h3>
         <p>Since 2016, we exist to strengthen the Junior Enterprise Global Network towards delivering more impact.</p>
         <p>Our role is to enlarge the network, by working and partnering for the creation of JEs & confederations in new countries, and to develop it, through support & connection initiatives.</p>
-        <div class="primary link"><a href="/global-council">Learn more</a></div>
+        <div class="primary link"><a href="/je-global">Learn more</a></div>
         <div class="primary link"><a href="/partners">Become a partner</a></div>
       </section>
     </div>
