--- a/themes/lyon-theme/layout/partial/mobile-navigation.ejs
+++ b/themes/lyon-theme/layout/partial/mobile-navigation.ejs
@@ -4,7 +4,7 @@
     <p><button class="close" role="button" onclick="closeMobileNav();">&times;</button></p>
     <a href="/">Home</a>
     <p class="cite">Who we are</p>
-    <a href="/global-council">Global Council</a>
+    <a href="/je-global">JEGlobal</a>
     <a href="/partners">Partners</a>
     <p class="cite">Network</p>
     <a href="/concept">The JE Concept</a>
