--- a/themes/lyon-theme/layout/partial/navigation.ejs
+++ b/themes/lyon-theme/layout/partial/navigation.ejs
@@ -5,7 +5,7 @@
     <div class="dropdown">
       <a href="#" onkeyup="openDropdown(event, 'who-we-are-menu');">Who we are</a>
       <div class="dropdown-content" id="who-we-are-menu">
-        <a href="/global-council">Global Council</a>
+        <a href="/je-global">JEGlobal</a>
         <a href="/partners">Partners</a>
         <!-- <a href="/opportunities">Opportunities</a> -->
       </div>
