--- a/themes/lyon-theme/layout/pages/je-global.ejs
+++ b/themes/lyon-theme/layout/pages/je-global.ejs
@@ -1,7 +1,7 @@
 <!-- Hero Section -->
 <section id="hero" class="u-white u-center bg-image">
   <img src="/assets/images/jobs-2k17-applause.jpeg">
-  <h1>Global Council</h1>
+  <h1>JEGlobal</h1>
 </section>
 
 <!-- Page Content -->
@@ -10,20 +10,21 @@
     <h3>Who we are</h3>
     <div class="row">
       <div class="two-thirds column">
-        <p>The <b>Junior Enterprise Global Council</b> is the International Organization that represents the Junior Enterprise Movement Worldwide.</p>
-        <p>We are currently composed by <a href="/confederations">18 confederations</a> which represent a total of 16 countries, all united in the Council with the following mission:</p>
+        <p>The <b>Junior Enterprises Global Organization</b> ("JEGlobal") is the International Organization that represents the Junior Enterprise Movement Worldwide.</p>
+        <p>We are currently composed by <a href="/confederations">19 confederations</a> which represent a total of 17 countries, all united in JEGlobal with the following mission:</p>
         <blockquote>Strengthen the Junior Enterprise Global Network towards boosting educational, economical and collaborative impact.</blockquote>
         <p>Since the confederations already represent JEs on a national or continental level, our work is focused on global aspects of the network.</p>
       </div>
       <div class="u-750-vcenter offset-by-two-thirds one-third column">
-        <img src="/assets/logos/jegc-logo.png" alt="JEGC Logo">
+        <img src="/assets/logos/jeglobal-2.png" alt="JEGlobal Logo">
       </div>
     </div>
   </section>
   <section>
     <h3>Our history</h3>
     <p>Even though the JE Movement exists since 1967, a global cooperation only started to be written in 2006 with the cooperation agreement signed between the European and Brazilian confederations, which led to the creation of the Junior Enterprise World Conference (JEWC).</p>
-    <p>In JEWC 2016, the second-ever <b>JE Global Forum</b> was held. National leaders united to discuss the next steps for the international network and the main resolution was the creation of the <b>Global Council</b> as a collaboration platform within the founder members.</p>
+    <p>In JEWC 2016, the second-ever <b>JE Global Forum</b> was held. National leaders united to discuss the next steps for the international network and the main resolution was the creation of the <b>JE Global Council</b> as a collaboration platform within the founder members.</p>
+    <p>Two years later, it was decided that the JE Global Council would be renamed as <b>Junior Enterprises Global</b>, reflecting how the organization grew beyond the initial council in order to better deliver its work.</p>
   </section>
 </div></div>
 
