--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -653,14 +653,14 @@ VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
 
 #network canvas { width: 100%; margin: 1rem 0; }
 
-/* Home Global Council Section
+/* Home JEGlobal Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 @media (min-width: 750px) {
-  #global-council .card { right: -3.5rem; padding: 0 3.5rem; }
+  #je-global .card { right: -3.5rem; padding: 0 3.5rem; }
 }
 
-/* Global Council Page Our Team Section
+/* JEGlobal Page Our Team Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .team-member {
