--- a/themes/lyon-theme/layout/pages/contact.ejs
+++ b/themes/lyon-theme/layout/pages/contact.ejs
@@ -11,7 +11,7 @@
       <h3>Get in touch</h3>
       <p>Have any questions or suggestions for us? Want to talk about partnerships, creating a JE or any other subject?</p>
       <p>Then don't hesitate to contact us!</p>
-      <p>Send us an e-mail to <a href="mailto:kalil.monteiro@brasiljunior.org.br">kalil.monteiro@brasiljunior.org.br</a> or use the form below:</p>
+      <p>Send us an e-mail to <a href="mailto:secretarygeneral@juniorenterprises.org">secretarygeneral@juniorenterprises.org</a> or use the form below:</p>
     </section>
   </div>
 </div>
