--- a/themes/lyon-theme/layout/pages/partners.ejs
+++ b/themes/lyon-theme/layout/pages/partners.ejs
@@ -49,7 +49,7 @@
   <img src="https://images.unsplash.com/photo-1525423186417-45cade1b79c0?q=75&amp;fm=jpg&amp;w=1000&amp;fit=max">
   <div class="container">
     <p><b>Want to become a partner of the Global Council?</b></p>
-    <p>Send an e-mail to <a class="u-white-link" href="mailto:kalil.monteiro@brasiljunior.org.br">kalil.monteiro@brasiljunior.org.br</a></p>
+    <p>Send an e-mail to <a class="u-white-link" href="mailto:secretarygeneral@juniorenterprises.org">secretarygeneral@juniorenterprises.org</a></p>
     <p>We are waiting for you!</p>
   </div>
 </section>
