--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -604,8 +604,8 @@ VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
 .Enlargement.tag { background: #6161a8 }
 /* .Enlargement.tag:focus, .Enlargement.tag:hover { background: #7676b2 } */
 
-.Development.tag { background: #d2852d }
-/* .Development.tag:focus, .Development.tag:hover { background: #d79447 } */
+.Opportunities.tag { background: #d2852d }
+/* .Opportunities.tag:focus, .Opportunities.tag:hover { background: #d79447 } */
 
 .Impact.tag { background: #323232 }
 /* .Impact.tag:focus, .Impact.tag:hover { background: #424242 } */
