--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -8,7 +8,7 @@
   <div class="container">
     <h1>
       <span class="pretyped">Students delivering</span>
-      <span class="typewriter" data-period="2000" data-type='["growth.","results.","projects.","change.","future."]'>growth.</span><span class="blinking"></span>
+      <span class="typewriter" data-period="2000" data-type="[&quot;growth.&quot;,&quot;results.&quot;,&quot;projects.&quot;,&quot;change.&quot;,&quot;future.&quot;]">growth.</span><span class="blinking"></span>
     </h1>
     <h2>Worldwide. Since 1967.</h2>
   </div>
