--- a/themes/lyon-theme/layout/partial/team-member-card.ejs
+++ b/themes/lyon-theme/layout/partial/team-member-card.ejs
@@ -1,6 +1,6 @@
 <div class="team-member">
-  <img src="<%- teammember.profilepic %>">
-  <h5><%- teammember.name %></h5>
-  <p><%- teammember.position %></p>
-  <p><a href="mailto:<%- teammember.email %>"><%- teammember.email %></a></p>
+  <img src="<%- member.profilepic %>">
+  <h5><%- mmember.name %></h5>
+  <p><%- member.position %></p>
+  <p><a href="mailto:<%- member.email %>"><%- member.email %></a></p>
 </div>
