--- a/themes/lyon-theme/layout/partial/team-member-card.ejs
+++ b/themes/lyon-theme/layout/partial/team-member-card.ejs
@@ -1,6 +1,6 @@
 <div class="team-member">
   <img src="<%- member.profilepic %>">
-  <h5><%- mmember.name %></h5>
+  <h5><%- member.name %></h5>
   <p><%- member.position %></p>
   <p><a href="mailto:<%- member.email %>"><%- member.email %></a></p>
 </div>
