Team Member Images Square Fix

--- a/themes/lyon-theme/source/assets/styles.css
+++ b/themes/lyon-theme/source/assets/styles.css
@@ -675,7 +675,15 @@ VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV */
   display: inline-block;
   vertical-align: top;
 }
-.team-member img { border-radius: 0.5rem; margin-bottom: 0.25rem; filter: grayscale(40%); transition: 0.15s ease-in all;}
+.team-member img {
+  border-radius: 0.5rem;
+  margin-bottom: 0.25rem;
+  filter: grayscale(40%);
+  transition: 0.15s ease-in all;
+  height: 160px;
+  width: 160px;
+  object-fit: cover;
+}
 .team-member:hover img { filter: grayscale(0%); }
 
 /* Confederations Page Social Links
